# tokenizmo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
configs/: corpus_55en_25ru_20code.yaml  corpus_available.yaml  corpus_code30.yaml  corpus_full.yaml  corpus_sample.yaml  corpus_v6.yaml
data/: test_cases.json
data/samples/: sample_code.py  sample_en.txt  sample_ru.txt
docs/: architecture.md
python/benchmarks/: baseline.py
python/tokenismo/: __init__.py  tokenismo.cp312-win_amd64.pyd.bak
scripts/: bench_throughput.py  bench_v6.py  benchmark_competitors.py  benchmark_results.md  compare_metrics.py  download_corpus.py  fetch_samples.py  find_failing_case.py  gen_test_cases.py  run_stress_test.py
tokenismo-core/: Cargo.toml
tokenismo-core/benches/: throughput.rs
tokenismo-core/fuzz/: Cargo.toml
tokenismo-core/fuzz/fuzz_targets/: fuzz_encode.rs
tokenismo-core/src/: batch.rs  decoder.rs  encoder.rs  lib.rs  vocab.rs  vocab_io.rs
tokenismo-core/src/trainer/: corpus.rs  em.rs  loss.rs  mod.rs  normalizer.rs  seed.rs  vocab_train.rs
tokenismo-core/tests/: edge_cases.rs  proptest_tests.proptest-regressions  proptest_tests.rs
tokenismo-py/: Cargo.toml  pyproject.toml
tokenismo-py/src/: lib.rs
trainer/: __init__.py  corpus.py  normalizer.py  test_prototype.py  train.py  trie.py  unigram_trainer.py  viterbi_encoder.py  vocabulary.py
