[workspace]
members = [
    "tokenismo-core",
    "tokenismo-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TokeNismo Contributors"]
license = "MIT"

[workspace.dependencies]
rayon = "1.10"
memmap2 = "0.9"
ahash = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-normalization = "0.1"
indicatif = { version = "0.17", features = ["rayon"] }
