[package]
name = "tokenismo-core"
version.workspace = true
edition.workspace = true
description = "TokeNismo tokenizer core — Unigram LM + Viterbi encoder"
license.workspace = true

[dependencies]
rayon.workspace = true
memmap2.workspace = true
ahash.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
flate2.workspace = true
clap.workspace = true
anyhow.workspace = true
unicode-normalization.workspace = true
indicatif.workspace = true

[[bin]]
name = "tokenismo-train"
path = "src/bin/tokenismo-train.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "throughput"
harness = false
