[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "tokenismo"
version = "0.1.0"
description = "TokeNismo — next-generation multilingual tokenizer"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "../python"
manifest-path = "Cargo.toml"
